# discord-bot

./: .gitignore  .gitlab-ci.yml  BUILDING.md  Cargo.toml  Dockerfile  README.md  README.org  TODO.md  TODO.org  state.db
.github/workflows/: build.yml
config/: config.yml
dockerfiles/: from-scratch.Dockerfile  pre-built.Dockerfile
src/: config.rs  config.test.toml  config.test.yml  config.ucc.rs  config.ucc.toml  config.ucc.yaml  config.ucc.yml  config.yml  database.rs  helpers.rs  ldap.rs  main.rs  reaction_roles.rs  serenity_handler.rs  token_management.rs  user_management.rs  util.rs  voting.rs
src/commands/: fun.rs  general.rs  voting.rs
