[package]
name = "ucc-discord-bot"
version = "0.1.0"
authors = ["tec <tec@ucc.gu.uwa.edu.au>"]
edition = "2018"

[dependencies]
base64 = "^0.11"
chrono = "^0.4.10"
lazy_static = "^1.4.0"
log = "^0.4.8"
openssl = "^0.10"
rand = "^0.7.2"
serde = "^1.0.104"
serde_yaml = "^0.8"
serenity = "0.8.0"
simplelog = "^0.7.4"
