[package]
name = "ucc-discord-bot"
version = "0.1.0"
authors = ["tec <tec@ucc.gu.uwa.edu.au>"]
edition = "2018"

[dependencies]
base64 = "^0.11"
chrono = "^0.4.10"
diesel = { version = "1.4.3", features = ["sqlite"] }
guard = "0.5.0"
indexmap = { version = "1.3.1", features = ["serde-1"] }
lazy_static = "^1.4.0"
ldap3 = "0.6"
log = "^0.4.8"
openssl = "^0.10"
rand = "^0.7.2"
rayon = "1.3.0"
regex = "^1.3"
serde = "^1.0.104"
serde_yaml = "^0.8"
serenity = "0.8.0"
simplelog = "^0.7.4"
url = "^2.1"
